--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,16 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.alan.sunshine.app.MainActivity"/>
         </activity>
+        <activity
+            android:name=".SettingsActivity"
+            android:label="@string/title_activity_settings"
+            android:parentActivityName=".MainActivity">
 
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.alan.sunshine.app.MainActivity"></meta-data>
+
+        </activity>
 
     </application>
 
